# whole-brain-fly-control

./: .gitignore  AGENTS.md  README.md  pyproject.toml
apps/neural-console/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
configs/eval/: walking_closed_loop.yaml
configs/model/: full_graph_il.yaml
configs/snapshot/: flywire_dry_run.yaml  flywire_fafb_v783.yaml
configs/train/: walking_il.yaml
design-system/: MASTER.md
design-system/pages/: console-family.md
docs/plans/: 2026-03-12-flybody-straight-walking-il-design.md  2026-03-12-flybody-straight-walking-il-implementation.md  2026-03-12-flywire-dry-run-snapshot-design.md  2026-03-12-flywire-dry-run-snapshot-implementation.md  2026-03-12-flywire-readonly-verification-design.md  2026-03-12-flywire-readonly-verification-implementation.md  2026-03-12-fruitfly-phase1-design.md  2026-03-12-fruitfly-phase1-implementation.md  (+46 more)
scripts/: build_il_dataset.py  build_node_neuropil_occupancy.py  build_node_roi_map.py  build_roi_asset_pack.py  build_synapse_roi_assignment.py  compile_graph.py  eval_flybody_closed_loop.py  eval_walking.py  export_flywire_snapshot.py  export_official_walk_imitation_scene.py  freeze_flywire_annotation_enrichment.py  import_flywire_783_neuropil_release.py  import_flywire_brain_mesh.py  import_flywire_roi_meshes.py  mujoco_fly_browser_viewer_worker.py  mujoco_fly_official_render_worker.py  probe_flybody.py  render_replay_frame.py  replay_frame_worker.py  serve_neural_console_api.py  train_il.py  validate_neuropil_truth.py  verify_flywire_readonly.py
tests/: test_bootstrap.py
(+206 files in other folders)
